# m3ustudio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  default_names.txt  docker-compose.yml  pyproject.toml  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/posts/: habr.md  hacker-news.md  reddit-iptv.md  reddit-selfhosted.md
scripts/: .deploy.env.example  deploy.sh
server/: __init__.py  ai_api.py  main.py  proxy.py  transcode.py
server/ai/: __init__.py  client.py  context.py  digest.py  generate.py  poster.py  prompts.py  tools.py  usage.py
server/epg/: __init__.py  guide.py
server/logos/: __init__.py  epg_icons.py  iptv_db.py  registry.py  resolver.py
server/notify/: __init__.py  telegram.py
server/planner/: __init__.py  scheduler.py  store.py
server/playlist/: __init__.py  builder.py  models.py  parser.py
server/recordings/: __init__.py  manager.py
server/state/: __init__.py  defaults.py  store.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/: AIAssistant.tsx  ArchivePanel.tsx  ChannelLogo.tsx  DailyDigest.tsx  DuplicatesModal.tsx  EpgPanel.tsx  Header.tsx  LogoManagerDialog.tsx  MainPanel.tsx  NowPlayingOverlay.tsx  PlansPanel.tsx  PlayerBody.tsx  PlayerChannelList.tsx  PlayerModal.tsx  QualityBadge.tsx  SectionNav.tsx  SourcePanel.tsx  ToastHost.tsx
web/src/hooks/: useIsMobile.ts  useNow.ts  (+4 more)
(+8 files in other folders)
